--- a/ss/resources/back/sass/app.scss
+++ b/ss/resources/back/sass/app.scss
@@ -66,7 +66,391 @@
     }
 }
 
-//GALLERY
+
+//CATEGORIES INDEX
+.card-title {
+    text-transform: uppercase;
+    font-size: 25px;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+.list-group-item {
+    display: flex;
+
+    .category-type {
+        margin: 0;
+        margin-bottom: 0;
+
+        .category-link {
+            text-decoration: none;
+            color: black;
+            font-size: 16px;
+
+            &:hover {
+                color: grey;
+                text-decoration: underline 0.5px lightgray;
+                letter-spacing: 1.5px;
+            }
+        }
+
+        .cat-title {
+            margin-bottom: 0;
+        }
+    }
+
+    .buttons {
+        display: flex;
+        gap: 20px;
+        margin-left: auto;
+
+        .btn-edit {
+            text-decoration: none;
+            color: black;
+            text-transform: uppercase;
+            font-size: 14px;
+
+            &:hover {
+                color: rgb(7, 163, 38);
+                text-decoration: underline 0.5px rgb(179, 230, 171);
+            }
+        }
+
+        .btn-delete {
+            background-color: transparent;
+            border: none;
+            font-size: 14px;
+            text-transform: uppercase;
+            padding: 0;
+
+            &:hover {
+                color: rgb(200, 2, 2);
+                text-decoration: underline 0.5px rgba(212, 109, 109, 0.739);
+            }
+        }
+    }
+}
+
+
+//CATEGORY-CREATE
+
+.inputs {
+    display: flex;
+    gap: 35px;
+
+    .form-label {
+        text-transform: uppercase;
+        margin-top: 5px;
+        letter-spacing: 1px;
+        font-weight: 500;
+    }
+
+    .form-control {
+        width: 65%;
+    }
+
+
+}
+
+.btn-add {
+    background-color: transparent;
+    border: none;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 0;
+    margin-left: auto;
+
+    &:hover {
+        color: rgb(15, 2, 200);
+        text-decoration: underline 0.5px rgba(109, 112, 212, 0.739);
+    }
+}
+
+.btn-add,
+.edit {
+    margin-right: 2em;
+}
+
+
+//CATEGORY EDIT
+
+
+//PRODUCTS INDEX
+.product-container {
+    .card-body {
+        .list-group-item {
+            border-top: 1px solid rgb(222, 222, 222);
+            margin-bottom: 15px;
+
+            .product {
+                display: flex;
+
+                .product-info {
+                    width: 50%;
+                    padding: 18px;
+                }
+
+                .product-photo {
+                    width: 35%;
+                    padding: 18px;
+
+                    img {
+                        width: 100%;
+                        object-fit: contain;
+                        margin-top: 5%;
+                    }
+                }
+            }
+
+            .buttons {
+                height: 100px;
+                width: 10%;
+                margin-top: -5px;
+            }
+        }
+    }
+}
+
+.products-inputs {
+    .mb-3 {
+        display: flex;
+        gap: 15px;
+
+        .form-label {
+            width: 10vw;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 500;
+            padding-top: 5px;
+        }
+
+        .form-control {
+            width: 70vw;
+        }
+
+        input {
+            resize: vertical;
+        }
+
+        .price-input {
+            width: 20%;
+        }
+    }
+}
+
+//PRODUCTS EDIT
+.cat-selection {
+    display: flex;
+    gap: 15px;
+
+    .form-label {
+        width: 10vw;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        padding-top: 5px;
+    }
+    .form-select {
+        width: 30vw;
+    }
+}
+
+.product-photo {
+    margin-top: 2em;
+    gap: 10%;
+    // .photo-col{
+        // .btn-delete {
+        //     position: absolute;
+        //     left: 15px;
+        //     width: 25px;
+        //     height: 25px;
+        //     padding: 0;
+        //     border-radius: 2em;
+        //     background-color: #fff;
+        //     border: 1px solid black;
+        //     font-weight: 500;
+        //     &:hover{
+        //         border: 2px solid crimson;
+        //         color: #fff;
+        //         background-color: crimson;
+        //         width: 35px;
+        //         height: 35px;
+        //         transform: translateY(-8px);
+        //         transition: ease 0.5s;
+        //     }
+        // }
+    // }
+
+    img {
+        width: 45%;
+        border-radius: 1em;
+    }
+
+    .product-main-photo {
+        width: 45%;
+        .photo-label {
+            width: 100%;
+        }
+        .form-control {
+            width: 100%;
+        }
+        .btn{
+            margin-top: 15px;
+        }
+    }
+
+}
+.gallery-col{
+    display: flex;
+    .gallery-label{
+        width: 15vw;
+        letter-spacing: 1.5px;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        padding-top: 5px;
+        margin-left: 15px;
+        .rem{
+            position: relative;
+            // left: 50px;
+            // top: -15px;
+            border: 1.5px solid black;
+            padding: 4px 8px;;
+            border-radius: 2em;
+            background-color: #fff;
+            &:hover{
+                border: 1px solid crimson;
+                color: #fff;
+                background-color: crimson;
+                cursor: pointer;
+            }
+        }
+    }
+    .form-control{
+        width: 50vw;
+    }
+}
+
+.btn-add-gallery{
+    width: 250px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-color: #eed1f5;
+    padding: 7px;
+    border-radius: 2em;
+    border: 1px solid #d5c8d8;
+    margin: 10px;
+    &:hover{
+        background-color: #e6b1f3;
+    }
+}
+.btn-edit-product{
+    width: 40vw;
+    margin-left: 20vw;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 7px;
+    background-color: #d1f5dee8;
+    border-radius: 2em;
+    border: 1px solid #d1ded7e8;
+    &:hover{
+        background-color: #6dd493;
+    }
+}
 [data-gallery="0"] {
     display: none;
+}
+
+.gallery-list{
+    .gallery{
+        margin-top: 25px;
+        grid: 1fr 1fr;
+        img{
+            width: 500px;
+            height: 500px;
+            object-fit: contains;
+            border-radius: 2em;
+            position: relative;
+        }
+    }
+}
+
+//CREATE PRODUCT
+.products-inputs{
+
+.cat-selection{
+    display: block;
+    .form-label {
+        width: 11vw;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        padding-top: 5px;
+        letter-spacing: 1px;
+    }
+    .form-select {
+        width: 30vw;
+    }
+    div{
+        display: flex;
+    }
+}
+.create-main-photo{
+    display: flex;
+    .form-label{
+        text-transform: uppercase;
+        width: 20vw;
+        font-weight: 500;
+        letter-spacing: 1px;
+    }
+    .form-control{
+        width: 40vw;
+    }
+}
+[data-gallery="0"] {
+    display: none;
+}
+.gallery-col{
+    margin-top: 15px;
+    .form-label{
+        text-transform: uppercase;
+        width: 19vw;
+        font-weight: 500;
+        letter-spacing: 1px;
+    }
+    .form-control{
+        width: 40vw;
+    }
+    .rem{
+        position: relative;
+        // left: 50px;
+        // top: -15px;
+        border: 1.5px solid black;
+        padding: 4px 8px;;
+        border-radius: 2em;
+        background-color: #fff;
+        &:hover{
+            border: 1px solid crimson;
+            color: #fff;
+            background-color: crimson;
+            cursor: pointer;
+        }
+    }
+}
+}
+
+//ORDERS
+.orders{
+    .card-body{
+        .list-group{
+            .card{
+               margin-bottom: 35px;
+            }
+            .total{
+                justify-content: flex-end;
+                width: 80vw;
+                display: flex;
+            }
+        }
+    }
 }
