--- a/ss/resources/front/sass/app.scss
+++ b/ss/resources/front/sass/app.scss
@@ -5,64 +5,598 @@
 @import 'bootstrap/scss/bootstrap';
 
 .nav-link {
-    svg {
-        width:40px;
-        height:40px;
+    .top-cart {
+        display: flex;
+        align-items: center;
+
+        svg {
+            height: 35px;
+            width: 35px;
+            transition: all 0.25s;
+
+            &:hover {
+                fill: rgba(40, 165, 255, 0.683);
+            }
+        }
+
+        .cart-info {
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 5px;
+            transition: all 0.6s;
+            width: 150px;
+
+            .count {
+                width: 28px;
+                height: 28px;
+                border: 2px solid rgb(11, 153, 255);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                transform: translate3d(-23px, 16px, 10px);
+                background-color: rgb(11, 153, 255);
+            }
+
+            .total {
+                letter-spacing: 1px;
+                margin-right: 55px;
+            }
+        }
     }
 }
 
-.stars {
-    padding: 20px 0 0 0;
-    display: flex;
-    // align-items: center;
-    position: relative;
-    [type=checkbox]+.star {
-        position: relative;
-        font-size: 30px;
-        color: crimson;
-        cursor: pointer;
-        user-select: none;
-        width: 25px;
-        &:after {
-            position: absolute;
-            content: '\2606'
+
+
+//INDEX
+.front-container {
+    .cat-card-title {
+        // text-align: center;
+        font-size: 24px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+
+    .cat .card-header {
+        .card-title {
+            text-align: center;
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+    }
+
+    .cat-links {
+        text-decoration: none;
+        font-size: 18px;
+        color: black;
+        letter-spacing: 1px;
+
+        &:hover {
+            color: rgb(92, 145, 243);
+            text-decoration: 1px underline;
         }
     }
-    [type=checkbox]:checked+.star {
-        &:after {
-            position: absolute;
-            content: '\2605'
-        }
-    }
-    [type=checkbox]+.star.half {
-        width: 25px;
-        &:before {
-            content: '\2606';
-            position: absolute;
-        }
-        &:after {
-            content: '\2605';
-            position: absolute;
-            width: 12px;
-            overflow: hidden;
-        }
-    }
-    [type=checkbox] {
-        display: none;
-    }
-    .result {
-        font-size: 20px;
-        font-weight: bold;
-        padding: 0 16px;
-        position: relative;
-        top: 8px;
+
+
+
+    .buy {
+        // display: flex;
+        gap: 20px;
+        // width: 20vw;
+        text-align: center;
+        margin-bottom: 10px;
+
         span {
-            font-size: 14px;
-            font-weight: normal;
+            font-size: 16px;
+            font-weight: 500;
+            padding: 3px;
+        }
+
+        .add-to-cart {
+            .number-input {
+                width: 50px;
+                background-color: rgb(232, 249, 255);
+                border: none;
+                border-bottom: 0.5px solid lightblue;
+                border-radius: 0.3em;
+                text-align: center;
+
+                &:hover {
+                    background-color: rgb(232, 249, 255);
+
+                }
+            }
+
+            .btn-add-cart {
+                background-color: transparent;
+                border: none;
+                font-size: 18px;
+                margin-left: 15px;
+
+                &:hover {
+                    background-color: #c8e3fd;
+                    border-radius: 0.7em;
+                }
+            }
         }
     }
-    .btn {
-        position: relative;
-        top: 26px;
+
+
+
+}
+
+.front-container {
+    .product-info {
+        .product-photo {
+            width: 20vw;
+
+            img {
+                width: 300px;
+                height: 300px;
+                object-fit: contain;
+            }
+        }
+
+        .card {
+            margin-bottom: 20px;
+
+            .card-items {
+                margin-left: 18%;
+            }
+
+            .vote {
+                display: block;
+                gap: 20px;
+
+                .cat-links {
+                    text-align: center;
+
+                    p {
+                        width: 80%;
+                    }
+                }
+            }
+
+            .stars {
+                top: -20px;
+                padding: 0px 0 0 0;
+                display: flex;
+                text-align: center;
+                position: relative;
+                width: 60%;
+                margin-left: 10%;
+
+                [type=checkbox]+.star {
+                    position: relative;
+                    font-size: 25px;
+                    color: rgb(250, 246, 0);
+                    cursor: pointer;
+                    user-select: none;
+                    width: 20px;
+
+                    &:after {
+                        position: absolute;
+                        content: '\2606'
+                    }
+                }
+
+                [type=checkbox]:checked+.star {
+                    &:after {
+                        position: absolute;
+                        content: '\2605'
+                    }
+                }
+
+                [type=checkbox]+.star.half {
+                    width: 25px;
+
+                    &:before {
+                        content: '\2606';
+                        position: absolute;
+                    }
+
+                    &:after {
+                        content: '\2605';
+                        position: absolute;
+                        width: 12px;
+                        overflow: hidden;
+                    }
+                }
+
+                [type=checkbox] {
+                    display: none;
+                }
+
+                .result {
+                    font-size: 12px;
+                    font-weight: bold;
+                    padding: 0 8px;
+                    position: relative;
+                    top: 8px;
+                    margin-top: 5px;
+
+                    span {
+                        font-size: 12px;
+                        font-weight: normal;
+
+                    }
+                }
+
+                .btn-vote {
+                    top: 10px;
+                    position: relative;
+                    background-color: transparent;
+                    border: 0.5px solid grey;
+                    border-radius: 0.8em;
+                    padding: 4px;
+                    font-size: 10px;
+                    text-transform: uppercase;
+
+                    &:hover {
+                        background-color: #c8e3fd;
+                        border: 0.8px solid #b9daf9;
+                    }
+                }
+            }
+        }
+
+        @media (min-width: 768px) {
+            display: inline-block;
+            width: 48%;
+            margin-right: 2%;
+            vertical-align: top;
+
+            &:nth-child(even) {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+//SHOW PRODUCT
+.show-product {
+    .row {
+        .prod-col {
+            .product-title {
+                color: crimson;
+            }
+
+            .card-body {
+                display: flex;
+
+                .product-img {
+                    width: 40vw;
+                    text-align: center;
+
+                    .gallery {
+                        display: flex;
+
+                    }
+
+                    .main-photo {
+                        width: 400px;
+                        // height: 400px
+                        object-fit: contain;
+                        border-radius: 5em;
+                        margin: 5%;
+                    }
+
+                    .gallery-img {
+                        width: 100px;
+                        height: 100px;
+                        object-fit: contain;
+                        margin: 10px;
+
+                    }
+
+                }
+
+
+                .product-info {
+                    width: 40vw;
+                    margin-top: 5%;
+
+                    .prod-title {
+                        font-size: 26px;
+                        letter-spacing: 2px;
+                    }
+
+                    .prod-description {
+                        width: 80%;
+                    }
+
+                    .stars {
+                        top: -20px;
+                        padding: 0px 0 0 0;
+                        display: flex;
+                        text-align: center;
+                        position: relative;
+                        width: 60%;
+
+                        [type=checkbox]+.star {
+                            position: relative;
+                            font-size: 25px;
+                            color: rgb(250, 246, 0);
+                            cursor: pointer;
+                            user-select: none;
+                            width: 20px;
+
+                            &:after {
+                                position: absolute;
+                                content: '\2606'
+                            }
+                        }
+
+                        [type=checkbox]:checked+.star {
+                            &:after {
+                                position: absolute;
+                                content: '\2605'
+                            }
+                        }
+
+                        [type=checkbox]+.star.half {
+                            width: 25px;
+
+                            &:before {
+                                content: '\2606';
+                                position: absolute;
+                            }
+
+                            &:after {
+                                content: '\2605';
+                                position: absolute;
+                                width: 12px;
+                                overflow: hidden;
+                            }
+                        }
+
+                        [type=checkbox] {
+                            display: none;
+                        }
+
+                        .result {
+                            margin-left: 15px;
+                            font-size: 12px;
+                            font-weight: bold;
+                            padding: 0 8px;
+                            position: relative;
+                            top: 8px;
+                            margin-top: 5px;
+
+                            span {
+                                font-size: 12px;
+                                font-weight: normal;
+
+                            }
+                        }
+
+                        .btn-vote {
+                            top: 10px;
+                            position: relative;
+                            background-color: transparent;
+                            border: 0.5px solid grey;
+                            border-radius: 0.8em;
+                            padding: 4px;
+                            font-size: 10px;
+                            text-transform: uppercase;
+
+                            &:hover {
+                                background-color: #c8e3fd;
+                                border: 0.8px solid #b9daf9;
+                            }
+                        }
+                    }
+                }
+
+                .buy {
+                    display: flex;
+                    gap: 25px;
+                    align-items: baseline;
+                    font-weight: 500;
+                    font-size: 18px;
+
+                    .add-to-cart {
+                        .number-input {
+                            width: 50px;
+                            background-color: rgb(232, 249, 255);
+                            border: none;
+                            border-bottom: 0.5px solid lightblue;
+                            border-radius: 0.3em;
+                            text-align: center;
+
+                            &:hover {
+                                background-color: rgb(232, 249, 255);
+
+                            }
+                        }
+
+                        .btn-add-cart {
+                            background-color: transparent;
+                            border: none;
+                            font-size: 18px;
+                            margin-left: 15px;
+
+                            &:hover {
+                                // background-color: #c8e3fd;
+                                border: 0.7px solid #c8e3fd;
+                                border-radius: 0.7em;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .about-product {
+                border: 1px solid grey;
+                padding: 15px;
+                border-radius: 2em;
+                // margin-left: 13vw;
+                // width: 60vw;
+            }
+        }
+
+    }
+}
+
+//CART 
+.card-body {
+    .list-group {
+        .cart-product-info {
+            padding: 25px;
+            border: 1px solid lightgray;
+            margin-bottom: 15px;
+
+            .cart-img {
+                float: left;
+                margin-right: 15px;
+
+                a {
+                    img {
+                        width: 200px;
+                        height: 200px;
+                        border-radius: 1em;
+                    }
+                }
+            }
+
+            .prod-main-info {
+                display: flex;
+                margin-top: 5%;
+
+                a {
+                    text-decoration: none;
+                    color: black;
+                    font-weight: 500;
+                    letter-spacing: 2px;
+
+                    &:hover {
+                        color: rgb(92, 145, 243);
+                        text-decoration: 1px underline;
+                    }
+                }
+
+                .btn-rem-cart {
+                    background-color: transparent;
+                    border: none;
+                    font-size: 14px;
+                    margin-left: 10px;
+                    float: right;
+                    border-radius: 2em;
+                    padding: 4px 8px;
+                    transform: translateY(-7px);
+
+                    &:hover {
+                        background-color: rgb(255, 75, 111);
+                    }
+
+                    .rem-cart {
+                        width: 16px;
+                    }
+
+                }
+            }
+
+            .buy {
+                display: flex;
+                width: 60%;
+                margin-top: 15px;
+
+                .count-input {
+                    background-color: transparent;
+                    border: none;
+                    border-bottom: 1px solid lightgrey;
+                    width: 45px;
+                    text-align: center;
+                }
+
+                .btn-update {
+                    background-color: transparent;
+                    border-radius: 2em;
+                    border: none;
+                    font-size: 20px;
+                    padding: 2px 10px;
+
+                    &:hover {
+                        background-color: #b9daf9;
+                        border-color: #add4f9;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.cart-bottom {
+    margin-left: auto;
+    margin-bottom: 15px;
+    margin-right: 15px;
+
+    .btn-buy-now {
+        cursor: pointer;
+        font-size: 1.2rem;
+        height: 3rem;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        background: #006dd4e8;
+        padding: 0.5rem 1.8rem;
+        box-shadow: 0 0.3rem 3px rgba(157, 157, 157, 0.65);
+
+
+        &:hover {
+            filter: brightness(110%);
+        }
+
+        &:active {
+            transform: translate(0, 0.3rem);
+            box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+        }
+    }
+}
+
+//ORDERS
+.orders-body{
+    .card{
+        margin-bottom: 15px;
+        .order-data{
+            display: flex;
+            gap: 20%;
+            padding: 15px;
+            font-size: 16px;
+            height: 4em;
+            border-bottom: 1px solid rgb(207, 207, 207);
+            a{
+                text-decoration: none;
+                color: black;
+                &:hover{
+                    color: rgb(13, 174, 255);
+                }
+                svg{
+                    &:hover{
+                        fill: rgb(13, 174, 255);
+                    }
+                }
+                span{
+                    font-size: 12px;
+                    
+                }
+            }
+        }
+        .table-header{
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
+        
+    }
+    .total{
+        justify-content: flex-end;
+        display: flex;
+        margin-right: 20px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
     }
 }
